; ModuleID = '/home/carl/AnghaBench/nanomsg/src/transports/ws/extr_ws_handshake.c_nn_ws_handshake_leave.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/transports/ws/extr_ws_handshake.c_nn_ws_handshake_leave.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_ws_handshake = type { i32, i32, i32, %struct.TYPE_2__, i32* }
%struct.TYPE_2__ = type { i32, i32* }

@NN_WS_HANDSHAKE_STATE_DONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nn_ws_handshake*, i32)* @nn_ws_handshake_leave to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nn_ws_handshake_leave(%struct.nn_ws_handshake* %0, i32 %1) #0 {
  %3 = alloca %struct.nn_ws_handshake*, align 8
  %4 = alloca i32, align 4
  store %struct.nn_ws_handshake* %0, %struct.nn_ws_handshake** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.nn_ws_handshake*, %struct.nn_ws_handshake** %3, align 8
  %6 = getelementptr inbounds %struct.nn_ws_handshake, %struct.nn_ws_handshake* %5, i32 0, i32 4
  %7 = load i32*, i32** %6, align 8
  %8 = load %struct.nn_ws_handshake*, %struct.nn_ws_handshake** %3, align 8
  %9 = getelementptr inbounds %struct.nn_ws_handshake, %struct.nn_ws_handshake* %8, i32 0, i32 3
  %10 = call i32 @nn_usock_swap_owner(i32* %7, %struct.TYPE_2__* %9)
  %11 = load %struct.nn_ws_handshake*, %struct.nn_ws_handshake** %3, align 8
  %12 = getelementptr inbounds %struct.nn_ws_handshake, %struct.nn_ws_handshake* %11, i32 0, i32 4
  store i32* null, i32** %12, align 8
  %13 = load %struct.nn_ws_handshake*, %struct.nn_ws_handshake** %3, align 8
  %14 = getelementptr inbounds %struct.nn_ws_handshake, %struct.nn_ws_handshake* %13, i32 0, i32 3
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  store i32 -1, i32* %15, align 8
  %16 = load %struct.nn_ws_handshake*, %struct.nn_ws_handshake** %3, align 8
  %17 = getelementptr inbounds %struct.nn_ws_handshake, %struct.nn_ws_handshake* %16, i32 0, i32 3
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 1
  store i32* null, i32** %18, align 8
  %19 = load i32, i32* @NN_WS_HANDSHAKE_STATE_DONE, align 4
  %20 = load %struct.nn_ws_handshake*, %struct.nn_ws_handshake** %3, align 8
  %21 = getelementptr inbounds %struct.nn_ws_handshake, %struct.nn_ws_handshake* %20, i32 0, i32 2
  store i32 %19, i32* %21, align 8
  %22 = load %struct.nn_ws_handshake*, %struct.nn_ws_handshake** %3, align 8
  %23 = getelementptr inbounds %struct.nn_ws_handshake, %struct.nn_ws_handshake* %22, i32 0, i32 1
  %24 = load %struct.nn_ws_handshake*, %struct.nn_ws_handshake** %3, align 8
  %25 = getelementptr inbounds %struct.nn_ws_handshake, %struct.nn_ws_handshake* %24, i32 0, i32 0
  %26 = load i32, i32* %4, align 4
  %27 = call i32 @nn_fsm_raise(i32* %23, i32* %25, i32 %26)
  ret void
}

declare dso_local i32 @nn_usock_swap_owner(i32*, %struct.TYPE_2__*) #1

declare dso_local i32 @nn_fsm_raise(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
